# testeqasharkit

./: .gitignore  README.md  conf.py  docker-compose.yml  e2e.sh  index.rst  pyproject.toml  requirements.txt
.github/workflows/: automation.yml
resources/: base.resource
resources/Helpers/: kws.resource
resources/cadastro/: valida-cadastro.resource
resources/carrinho/: valida-carrinho.resource
resources/login/: valida-login.resource
tests/: cadastro.robot  carrinho.robot  login.robot
