[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^4.1"
robotframework-seleniumlibrary = "^5.1"
selenium = "^3.141"
sphinx = "^4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8"

[tool.poetry]
name = "meu_projeto"
version = "0.1.0"
description = "Meu projeto usando Robot Framework"
authors = ["Cicero Marcelo da Silva"]
